--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prod_start": "NODE_ENV=production & nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -18,8 +19,11 @@
     "express": "^4.17.2",
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.17.2",
+    "gulp-cssnano": "^2.1.3",
+    "gulp-rev": "^9.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.8",
+    "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "node-sass": "^7.0.1",
     "nodemailer": "^6.7.2",
@@ -27,6 +31,10 @@
     "passport-google-oauth": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
+    "rotating-file-stream": "^3.0.2",
     "socket.io": "^4.4.1"
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2"
   }
 }
